Changed picture implementation, updated data.js, fixed simple scrollbar

--- a/src/App/ContentGrid/content.css
+++ b/src/App/ContentGrid/content.css
@@ -1,8 +1,8 @@
 .content-wrapper{
     position: absolute;
     z-index: 0;
-    right: 0;
     margin-top: 1.5rem;
+    margin-left: 3.75rem;
     width: calc(100vw - 3.75rem);
     height: calc(100% - 1.5rem);
 }
@@ -18,7 +18,7 @@
 .grid-item{
     display: flex;
     background-color: #232529;
-    border-radius: 5px; 
+    border-radius: 10px; 
     font-size: 2rem;
     cursor: pointer;
     justify-content: center;
@@ -33,7 +33,8 @@
 .company-logo{
     display: flex;
     padding: 2rem;
-    border-radius: 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     width: 100%;
     height: 75%;
     background-color: #3b3e43;
@@ -49,20 +50,23 @@
 
 .company-name{
   height: 25%;
+  font-weight: 500;
   color: #FFF;
   font-size: 1.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-.simplebar-scrollbar:before{
-  background: linear-gradient(0deg, #fa4d4f 0%, #9a249c 53%, #4f0dcf 100%);
-  top: 2px;
-  bottom: 2px;
+.simplebar-scrollbar::before{
+  background: #e20080;
   left: 0;
   right: 0;
   margin-right: 2px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .simplebar-scrollbar.simplebar-visible:before{
@@ -71,5 +75,4 @@
 
 .simplebar-track.simplebar-vertical {
   width: 8px;
-  height: 100%;
 }
